# acp-prd-builder

./: .gitignore  README.md  TASK.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: prd-generation-research.md  spec-kit-integration-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: acp_session_store_sqlite.rs  agent_catalog.rs  beads.rs  fs.rs  git.rs  github.rs  mod.rs  permission_broker.rs  pull_request_review_store_sqlite.rs  saved_prompt_store_sqlite.rs  session_registry.rs  sqlite.rs  storage_state.rs  workspace_store.rs  workspace_store_migration.rs  workspace_store_sqlite.rs
src-tauri/src/adapters/acp/: client.rs  mod.rs  permission_flow.rs  runner.rs  terminal.rs  transport.rs
src-tauri/src/adapters/tauri/: commands.rs  event_sink.rs  mod.rs
src-tauri/src/application/: list_agents.rs  list_local_tasks.rs  load_goal_file.rs  mod.rs  resolve_workdir.rs  respond_permission.rs  send_prompt.rs  start_agent_run.rs  update_local_task_status.rs  workspace_git.rs  workspace_worktree.rs
src-tauri/src/domain/: acp_session.rs  events.rs  git.rs  local_task.rs  mod.rs  pull_request_review.rs  saved_prompt.rs  workbench_window.rs  workspace.rs
src-tauri/src/ports/: acp_session_store.rs  git_repository.rs  github_pull_request.rs  goal_file.rs  local_task_source.rs  mod.rs  permission.rs  pull_request_review_store.rs  saved_prompt_store.rs  session_registry.rs  workspace_store.rs
(+73 files in other folders)
