[package]
name = "acp-prd-builder"
version = "0.1.0"
description = "Tauri ACP PRD builder"
authors = ["you"]
edition = "2024"

[lib]
name = "acp_prd_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18", features = ["v4", "v5"] }
